@@ -1,3 +1,11 @@
+Wed Nov  2 19:24:24 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>
+
+        * tests/cuts/arch/tcpip:
+        * tests/cuts/arch/tcpip/TCPIP_ORB_Test.cpp:
+        * tests/cuts/arch/tcpip/tests.mpc:
+
+          Removed these files.
+
 Wed Nov  2 19:15:09 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>
 
         * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/lang/cpp/Behavior_Generator.cpp:
